<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/cardview_dark_background"
    tools:context=".QuizQuestion">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/question1"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/question"/>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:drawable="@drawable/answer_selected"
        android:layout_width="289dp"
        android:id="@+id/answera"
        android:layout_height="63dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/tva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/answera"
            android:textColor="@color/black" />/>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/answerb"
        android:drawable="@drawable/answer_selected"
        android:layout_width="289dp"
        android:layout_height="63dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/answerb"/>/>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/answerc"
        android:drawable="@drawable/answer_selected"
        android:layout_width="289dp"
        android:layout_height="63dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/tvc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/answerc"
            android:textColor="@color/black" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/finish_button"
        android:layout_width="110dp"
        android:layout_height="63dp"
        android:text="@string/finish"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="130dp"/>

</LinearLayout>